# vale-spec-experiment

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  pyproject.toml
.claude/: settings.json
.claude/commands/: decision.md  work.md
.claude/hooks/: post-commit-reminder.sh  version-check.sh
.deciduous/: config.toml  deciduous.db
.github/workflows/: deploy.yml
chats/: 1.txt  2.txt
docs/: graph-data.json
search/: search_index.json
vale-spec/: mkdocs.yml
vale-spec/docs/: index.md
