[tool.poetry]
name = "vale-specification"
version = "0.1.0"
description = "mkdocs project"
authors = ["The Temper Contributors"]
license = "CC4.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.0"
mkdocs-material = "^9.6.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
